--- a/hoge.html
+++ b/hoge.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>hoge</title>
+        <title></title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>TeraLog</h1>
-        <a href="./hoge.html"></a>
+        hoge
     </body>
 </html>
