--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>TeraLog</h1>
-        <a href="./hoge.html"></a>
+        <a href="./hoge.html">hogehoge</a>
     </body>
 </html>
