--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>TeraLog</h1>
-        <a href="./hoge.html">hogehoge</a>
+        <img src="./img/icon.png" alt="アイコン">
+        <p>Teraです</p>
+        <p>
+            <a href="https://twitter.com/tera_3939">Twitter</a>
+            <a href="http://teralabo.hatenablog.com/">Blog</a>
+        </p>
     </body>
 </html>
