--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>hoge</title>
+        <title>Tera</title>
         <meta charset="UTF-8">
     </head>
     <body>
