GitHub, Speaker DeckのURLを追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <p>
             <a href="https://twitter.com/tera_3939">Twitter</a>
             <a href="http://teralabo.hatenablog.com/">Blog</a>
+            <a href="https://github.com/tera3939">GitHub</a>
+            <a href="https://speakerdeck.com/tera">Speaker Deck</a>
         </p>
     </body>
 </html>
