--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <body>
         <img src="./img/icon.png" alt="アイコン">
         <p>Teraです</p>
-        <p>
-            <a href="https://twitter.com/tera_3939">Twitter</a>
-            <a href="http://teralabo.hatenablog.com/">Blog</a>
-            <a href="https://github.com/tera3939">GitHub</a>
-            <a href="https://speakerdeck.com/tera">Speaker Deck</a>
-        </p>
+        <ul>
+            <li><a href="https://twitter.com/tera_3939">Twitter</a></li>
+            <li><a href="http://teralabo.hatenablog.com/">Blog</a></li>
+            <li><a href="https://github.com/tera3939">GitHub</a></li>
+            <li><a href="https://speakerdeck.com/tera">Speaker Deck</a></li>
+            <li><a href="http://amzn.asia/2QmMquz">🍠</a></li>
+        </ul>
     </body>
 </html>
